unpackaged/main/default/objects/ET_Vehicle_Depreciation_Master__c/ET_Vehicle_Depreciation_Master__c.object-meta.xml
<CustomObject>
    <label>Vehicle Depreciation Master</label>
    <nameField>
        <displayFormat>VDM-{0000}</displayFormat>
        <label>Vehicle Depreciation Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Depreciation Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>