unpackaged/main/default/objects/ET_Vehicle_Depreciation_Master__c/fields/ET_Deduction_Rate_for_latest_new_price__c.field-meta.xml
<CustomField>
    <fullName>ET_Deduction_Rate_for_latest_new_price__c</fullName>
    <label>Deduction Rate for latest new price del</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>