unpackaged/main/default/objects/ET_Vehicle_Depreciation_Master__c/fields/ET_Depreciation_2_Year__c.field-meta.xml
<CustomField>
    <fullName>ET_Depreciation_2_Year__c</fullName>
    <defaultValue>&#39;0&#39;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Depreciation Rate/Resale Value(2 Year)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>