unpackaged/main/default/objects/ET_Vehicle_Depreciation_Master__c/fields/Et_Is_allowed_in_alter_rates__c.field-meta.xml
<CustomField>
    <fullName>Et_Is_allowed_in_alter_rates__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is to indicate whether this depreciation can be changed in alter rates or not</description>
    <label>Is allowed to change in alter rates</label>
    <type>Checkbox</type>
</CustomField>