unpackaged/main/default/objects/ET_Vehicle_Depreciation_Master__c/fields/ET_Max_Depreciation_Years__c.field-meta.xml
<CustomField>
    <fullName>ET_Max_Depreciation_Years__c</fullName>
    <label>Max Depreciation Years del</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>