unpackaged/main/default/objects/ET_Vehicle_Depreciation_Master__c/fields/ET_Minimum_resale_value_percentage__c.field-meta.xml
<CustomField>
    <fullName>ET_Minimum_resale_value_percentage__c</fullName>
    <label>Minimum resale value percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>