unpackaged/main/default/objects/ET_Vehicle_Depreciation_Master__c/fields/ET_Vehicle_Type_Master__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Type_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle Type Master del</label>
    <referenceTo>ET_Vehicle_Type_Master__c</referenceTo>
    <relationshipLabel>Vehicle Depreciation Masters</relationshipLabel>
    <relationshipName>Vehicle_Depreciation_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>