unpackaged/main/default/objects/ET_Vehicle_Depreciation_Master__c/fields/Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>