unpackaged/main/default/objects/ET_Vehicle_Depreciation_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vehicle_Make__c</columns>
    <columns>ET_Vehicle_Model__c</columns>
    <columns>ET_Depreciation_1_Year__c</columns>
    <columns>ET_Depreciation_2_Year__c</columns>
    <columns>ET_Depreciation_3_Year__c</columns>
    <columns>ET_Depreciation_4_Year__c</columns>
    <columns>ET_Depreciation_5_Year__c</columns>
    <columns>ET_Depreciation_6_Year__c</columns>
    <columns>ET_Depreciation_7_Year__c</columns>
    <columns>ET_Depreciation_8_Year__c</columns>
    <columns>ET_Depreciation_Rate_Max__c</columns>
    <columns>ET_Min_Resale_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>